# ccsp-cr

./: CONTRIBUTING.md  Makefile.orig  configure.ac  genautotools.ini
config/: cr-deviceprofile_arm.xml  cr-deviceprofile_embedded.xml  cr-deviceprofile_mips.xml
source/: CcspCrSsp  Makefile.am  cr-deviceprofile.xml  cr-deviceprofile_xle-wnc.xml  cr-ethwan-deviceprofile.xml
source/CCSP_CR/: CCSP_CR.dsp  ccsp_cr_base.c  ccsp_cr_exportDM.c  ccsp_cr_internal_api.h  ccsp_cr_operation.c  ccsp_cr_profile.c  ccsp_cr_session.c  ccsp_cr_utility.c
source/CrSsp/: CcspCrSsp.dsp  CcspCrSsp.dsw  cr-deviceprofile_hybrid_android.xml  cr-deviceprofile_ven501.xml  ssp_cmd.c  ssp_dbus.c  ssp_global.h  ssp_main.c  ssp_rbus.c
source/test/: Makefile.am  gtest_main.cpp
