AM_CFLAGS =
AM_CPPFLAGS = -Wall -Werror
AM_LDFLAGS = -lm -lccsp_common
ACLOCAL_AMFLAGS = -I m4
hardware_platform = i686-linux-gnu
bin_PROGRAMS = CcspCrSsp
CcspCrSsp_CPPFLAGS =
CcspCrSsp_SOURCES = CCSP_CR/ccsp_cr_operation.c 
		CCSP_CR/ccsp_cr_utility.c 
		CCSP_CR/ccsp_cr_profile.c 
		CCSP_CR/ccsp_cr_base.c 
		CCSP_CR/ccsp_cr_exportDM.c 
		CCSP_CR/ccsp_cr_session.c
		CrSsp/ssp_dbus.c 
		CrSsp/ssp_cmd.c 
		CrSsp/ssp_main.c
